app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
:root {
  height: 100%;
}
 
@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;

    --card: 0 0% 85%;
    --card-foreground: 0 0% 3.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
 
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
 
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
 
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
 
    --accent: 221 25% 85%;
    --accent-foreground: 0 0% 9%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 217 37% 48%;

    --orange: 36 91% 43%;
    --green: 118 74% 33%;
    --yellow: 51 96% 48%;
 
    --radius: 0.5rem;

    --profile: 232, 33%, 90%;
  }
 
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
 
    --card: 0 0% 0%;
    --card-foreground: 0 0% 81%;
 
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
 
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
 
    --secondary: 228 29% 7%;
    --secondary-foreground: 0 0% 98%;
 
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
 
    --accent: 221 49% 20%;
    --accent-foreground: 0 0% 98%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
 
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 217 37% 48%;

    --profile: 232, 33%, 9%;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.spinner {
  animation-name: spin;
  animation-duration: 5000ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

@keyframes spin {
    from {
        transform:rotate(0deg);
    }
    to {
        transform:rotate(360deg);
    }
}

.blue-bg {
  background: rgb(2,0,36);
  background: linear-gradient(349deg, rgba(16,16,59,1) 0%, rgba(28,39,88,1) 65%, rgba(155,217,249,1) 126%);
}

.teaser-blur {
  width: 500px;
  height: 250px;
  -webkit-backdrop-filter: blur(20px);
  backdrop-filter: blur(20px);
  -webkit-mask: linear-gradient(180deg, transparent, rgba(16,16,59,1) 70%);
  margin-top: -400px;
}

.organizationPreviewTextContainer,
.cl-organizationSwitcherTriggerIcon {
  display: none;
}

.cl-organizationSwitcherTrigger,
.cl-organizationSwitcherTrigger .cl-avatarBox {
  width: 64px;
  height: 64px;
}

.markdown-chat-message {
  white-space: normal;
}
.markdown-chat-message a {
  color: hsl(var(--ring));
}
.markdown-chat-message a:hover {
  color: hsl(var(--ring));
  text-decoration: underline;
}
.markdown-chat-message p, 
.markdown-chat-message table {
  padding: 5px 0;
}
.markdown-chat-message pre, 
.markdown-chat-message code {
  background: hsl(217 37% 68%);
  margin: 10px 0;
  border-radius: 5px;
  padding: 0 4px;
}
.markdown-chat-message pre {
  padding: 0 10px;
  /* fixes horizontal scroll blowout */
  display: grid;
}

.markdown-chat-message table {
  margin: 5px 0 10px;
}

.markdown-chat-message th, 
.markdown-chat-message td {
  border: 1px solid hsl(var(--muted-foreground));
  padding: 8px;
}
.markdown-chat-message ol {
  padding: 5px;
}
  .markdown-chat-message li {
  list-style: auto;
  margin: 10px 15px;
  padding: 0 5px;
}
.markdown-chat-message ul li {
  list-style: disc;
}

.text-nano {
  font-size: 0.25rem;
}
.text-xxs {
  font-size: 0.6rem;
}

